NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Contact_for_T_C_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_for_T_C_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for T&amp;C Acceptance</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>