NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/External_Id_1__c.field-meta.xml
<CustomField>
    <fullName>External_Id_1__c</fullName>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>