NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>SBQQ__Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>