NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Host_Unit__c.field-meta.xml
<CustomField>
    <fullName>Host_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host Unit</label>
    <type>Checkbox</type>
</CustomField>