NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/isEquipment__c.field-meta.xml
<CustomField>
    <fullName>isEquipment__c</fullName>
    <formula>IF(SBQQ__ProductOption__r.NATT_Feature_Name__c  = &apos;Equipamento&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEquipment</label>
    <type>Checkbox</type>
</CustomField>