NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lookup_Data__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>test</description>
    <label>Lookup Data</label>
    <referenceTo>SBQQ__LookupData__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>