NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lynx_Fleet_TMS_Integration_Support__c.field-meta.xml
<CustomField>
    <fullName>Lynx_Fleet_TMS_Integration_Support__c</fullName>
    <label>Lynx Fleet TMS Integration Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO TMS Integration Support</fullName>
            </value>
            <value>
                <fullName>CargoWatch - Orbcomm</fullName>
            </value>
            <value>
                <fullName>AddOn Systems TMNi Module</fullName>
            </value>
            <value>
                <fullName>AXON TMS</fullName>
            </value>
            <value>
                <fullName>Bolt Systems</fullName>
            </value>
            <value>
                <fullName>Cetaris - Fleet Maintenance Software</fullName>
            </value>
            <value>
                <fullName>Full Circle TMS</fullName>
            </value>
            <value>
                <fullName>McLeod LoadMaster (2-Way) v.16.1</fullName>
            </value>
            <value>
                <fullName>McLeod LoadMaster (Base) v.11.1</fullName>
            </value>
            <value>
                <fullName>Nic-Place</fullName>
            </value>
            <value>
                <fullName>OmniTracs - &quot;RNA&quot; Road Net Anywhere</fullName>
            </value>
            <value>
                <fullName>OmniTracs - &quot;Sylectus&quot;</fullName>
            </value>
            <value>
                <fullName>Optym - Axele TMS</fullName>
            </value>
            <value>
                <fullName>PCS Software</fullName>
            </value>
            <value>
                <fullName>Prophesy - High Jump</fullName>
            </value>
            <value>
                <fullName>SCVP - FourKites</fullName>
            </value>
            <value>
                <fullName>SCVP - Freight Verify</fullName>
            </value>
            <value>
                <fullName>SCVP - MacroPoint</fullName>
            </value>
            <value>
                <fullName>SCVP - Overhaul</fullName>
            </value>
            <value>
                <fullName>SCVP - Trimble Visibility aka 10-4 Systems</fullName>
            </value>
            <value>
                <fullName>SCVP - Trucker Tools</fullName>
            </value>
            <value>
                <fullName>SSI PowerPro v. 14.1.23</fullName>
            </value>
            <value>
                <fullName>Strategy Systems - &quot;Strategy Live&quot;</fullName>
            </value>
            <value>
                <fullName>TMW - Innovative/Access v.2016.1</fullName>
            </value>
            <value>
                <fullName>TMW - Suite (Powerbuilder) TotalMail v.16.10</fullName>
            </value>
            <value>
                <fullName>TMW - Suites (Operations) TotalMail version 16.10</fullName>
            </value>
            <value>
                <fullName>TMW - TruckMate v.13.2.195.3</fullName>
            </value>
            <value>
                <fullName>TransPlus Software - FleetManager Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>