NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant__c</fullName>
    <label>Manufacturing Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>