NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Administration_Fees__c.field-meta.xml
<CustomField>
    <fullName>NATT_Administration_Fees__c</fullName>
    <label>Administration Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>