NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Antifreeze_Price_per_gal__c.field-meta.xml
<CustomField>
    <fullName>NATT_Antifreeze_Price_per_gal__c</fullName>
    <defaultValue>17</defaultValue>
    <description>NATT for calculating parts cost for CMRA BluEdge</description>
    <label>zDeleteAntifreeze Price (per gal)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>