NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Auto_Start_Stop_Operation__c.field-meta.xml
<CustomField>
    <fullName>NATT_Auto_Start_Stop_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>natt bluedge</description>
    <label>zDeleteAuto-Start/Stop Operation</label>
    <type>Checkbox</type>
</CustomField>