NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Battery_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Battery_Price__c</fullName>
    <description>Used to calculate the price of the replacement battery for CRMA</description>
    <formula>IF(ISPICKVAL(NATT_Battery_Type__c, &quot;Excluded&quot;),0,IF(ISPICKVAL(NATT_Battery_Type__c,&quot;AGM&quot;), 426.62, 171.81))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeleteBattery Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>