NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Battery_Replacement_Interval__c.field-meta.xml
<CustomField>
    <fullName>NATT_Battery_Replacement_Interval__c</fullName>
    <formula>IF(ISPICKVAL(NATT_Battery_Type__c, &quot;Excluded&quot;),0,
  IF(ISPICKVAL(NATT_Battery_Type__c, &quot;Wet Cell&quot;),3000,9000))</formula>
    <label>zDeleteBattery Replacement Interval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>