NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BluEdge_CMRA_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_CMRA_Price__c</fullName>
    <description>This field is auto calculated from a flow and only works for BluEdge enhance quote line.</description>
    <label>BluEdge CMRA Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>