NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BluEdge_Elite_Enhance_Rollup__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Elite_Enhance_Rollup__c</fullName>
    <formula>IF(AND(NATT_Grouped_By_Line_Number__c = 1, OR(TEXT(NATT_BluEdge_Price_Rollup__c) == &apos;Elite&apos;, TEXT(NATT_BluEdge_Price_Rollup__c) == &apos;Enhance&apos;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BluEdge Elite/Enhance Rollup</label>
    <type>Checkbox</type>
</CustomField>