NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BluEdge_Inventory_Original_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Inventory_Original_Price__c</fullName>
    <formula>NATT_Inventory__r.NATT_Original_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BluEdge Inventory Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>