NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BluEdge_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BluEdge Terms</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
        <filterItems>
            <field>$Source.NATT_Unit__c</field>
            <operation>equals</operation>
            <valueField>NATT_BluEdge_Terms__c.NATT_Unit__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.NATT_BluEdge_Price_Type__c</field>
            <operation>equals</operation>
            <valueField>NATT_BluEdge_Terms__c.NATT_BluEdge_Price_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.NATT_Tavant_Id__c</field>
            <operation>equals</operation>
            <valueField>NATT_BluEdge_Terms__c.NATT_Tavant_ID__c</valueField>
        </filterItems>
        <filterItems>
            <field>NATT_BluEdge_Terms__c.NATT_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>CGI Administrator, System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NATT_BluEdge_Terms__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>