NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BluEdge_Top_Level_Bundle__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Top_Level_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>twin field for bluedge aftermarket/extension</description>
    <label>NATT BluEdge Top Level Bundle</label>
    <type>Checkbox</type>
</CustomField>