NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BluEdge_Travel_Rate__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Travel_Rate__c</fullName>
    <formula>$Label.NATT_BluEdge_Travel_Rate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATT BluEdge Travel Rate</label>
    <type>Text</type>
</CustomField>