NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_BlueEdge_Extension_Price_Reduction__c.field-meta.xml
<CustomField>
    <fullName>NATT_BlueEdge_Extension_Price_Reduction__c</fullName>
    <label>BlueEdge Extension Price Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>