NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bundle_Name__c</fullName>
    <description>NATT</description>
    <formula>CASE( SBQQ__OptionLevel__c ,
  2 , SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__ProductName__c ,
  1 , SBQQ__RequiredBy__r.SBQQ__ProductName__c ,
  SBQQ__ProductName__c
) + &quot; (Req Ship Date &quot; + TEXT(NATT_Requested_Ship_Date__c)+&quot;)&quot;</formula>
    <label>Bundle Name</label>
    <type>Text</type>
</CustomField>