NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Bundle_P_N_Key__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bundle_P_N_Key__c</fullName>
    <label>Bundle P/N Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>