NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Hours_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Hours_Per_Year__c</fullName>
    <description>natt bluedge</description>
    <formula>NATT_CMRA_Term_Hours__c /  NATT_CMRA_Term_Years__c</formula>
    <label>zDeleteCMRA Hours Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>