NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Labor_Hours__c</fullName>
    <description>CMRA calculations</description>
    <label>zDeleteCMRA Labor Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>