NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Labor_Rate__c</fullName>
    <defaultValue>139.5</defaultValue>
    <description>standardized across all dealers and carrier</description>
    <label>zDeleteCMRA Labor Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>