NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Months__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Months__c</fullName>
    <description>natt</description>
    <formula>NATT_CMRA_Term_Years__c * 12</formula>
    <label>zDeleteCMRA Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>