NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Number_of_Periods_to_Consider__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Number_of_Periods_to_Consider__c</fullName>
    <description>NATT BluEdge Enhanced - the minimum between the hours intervals and months periods to consider when calculating enhance pricing</description>
    <label>zDeleCMRA Number of Periods to Consider</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>