NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Parts_Overhead__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Parts_Overhead__c</fullName>
    <defaultValue>0.125</defaultValue>
    <description>for calculating cmra</description>
    <label>CMRA Parts Overhead</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>