NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Term_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Term_Hours__c</fullName>
    <description>for natt bluedge</description>
    <label>Term (Hours)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>