NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_CMRA_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Term_Years__c</fullName>
    <description>used with NATT BluEdge</description>
    <label>Term (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>