NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Configured_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Configured_Unit_Code__c</fullName>
    <description>the part number of the unit from the quote</description>
    <formula>SBQQ__Quote__r.NATT_Configured_Unit_Code__c</formula>
    <label>Configured Unit Code</label>
    <type>Text</type>
</CustomField>