NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Contains_BluEdge_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contains_BluEdge_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is product the price should go for bluedge for the integration</description>
    <label>Contains BluEdge Price</label>
    <type>Checkbox</type>
</CustomField>