NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Core_Rollup__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Rollup__c</fullName>
    <formula>ISPICKVAL(NATT_BluEdge_Price_Rollup__c,&quot;Core&quot;) &amp;&amp;  NATT_Grouped_By_Line_Number__c = 1</formula>
    <label>Core Rollup</label>
    <type>Checkbox</type>
</CustomField>