NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Cost__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cost__c</fullName>
    <description>This field is created as a reference of NATT_Cost_Calculate
Because SF doesn&apos;t support formula fields for the roll-up summary</description>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>