NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Cost_Calculate__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cost_Calculate__c</fullName>
    <description>CCRN-3074
This field is created to calculate the Unit cost* Quantity</description>
    <formula>SBQQ__Product__r.NATT_UnitCost__c  *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>