NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Coverage_Type</valueSetName>
    </valueSet>
</CustomField>