NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Custom_Root_Asset_CPQ__c.field-meta.xml
<CustomField>
    <fullName>NATT_Custom_Root_Asset_CPQ__c</fullName>
    <label>Custom Root Asset (CPQ)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>