NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Deductibles2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Deductibles2__c</fullName>
    <description>used for Tavant Integration</description>
    <formula>TEXT(NATT_Major_Component_Deductible__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deductibles</label>
    <type>Text</type>
</CustomField>