NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Deductibles__c.field-meta.xml
<CustomField>
    <fullName>NATT_Deductibles__c</fullName>
    <description>used for Tavant Integration</description>
    <label>Deductibles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>