NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Discount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Discount__c</fullName>
    <description>https://proactionus.ent.cgi.com/jira/browse/CARRTRANS-352</description>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>