NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Discount_Amount_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Discount_Amount_Per_Unit__c</fullName>
    <formula>SBQQ__ListPrice__c * SBQQ__TotalDiscountRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>