NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Display_Terms_Button__c.field-meta.xml
<CustomField>
    <fullName>NATT_Display_Terms_Button__c</fullName>
    <description>used to display button - custom action</description>
    <formula>OR(
ISPICKVAL(NATT_BluEdge_Price_Type__c,&quot;Major Component&quot;),
ISPICKVAL(NATT_BluEdge_Price_Type__c,&quot;Optional Coverage&quot;),
ISPICKVAL(NATT_BluEdge_Price_Type__c,&quot;Extended Basic&quot;)
)</formula>
    <label>Display Terms Button</label>
    <type>Checkbox</type>
</CustomField>