NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Don_t_Delete__c.field-meta.xml
<CustomField>
    <fullName>NATT_Don_t_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in validation to prevent the user from deleting a line</description>
    <label>Don&apos;t Delete</label>
    <type>Checkbox</type>
</CustomField>