NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Elite_Repair_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Elite_Repair_Hours__c</fullName>
    <formula>IF(OR(ISPICKVAL( NATT_BluEdge_Price_Type__c ,&apos;Elite Repair&apos;), AND(ISPICKVAL( NATT_BluEdge_Price_Type__c ,&apos;Optional Coverage&apos;), CONTAINS(SBQQ__ProductCode__c, &apos;-T0240&apos;),  SBQQ__Quote__r.NATT_BluEdge_Elite__c)),TEXT(NATT_CMRA_Term_Hours__c),&apos;&apos;)</formula>
    <label>Elite Repair Hours</label>
    <type>Text</type>
</CustomField>