NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Engine_Hours_per_Period__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_Hours_per_Period__c</fullName>
    <description>for natt bluedge enhance calculation</description>
    <formula>IF(AND(ISPICKVAL(NATT_Oil_Type__c,&quot;Synthetic&quot;), NATT_Engine_Hours_Year__c &gt; 2000), 2000, 
IF(AND(ISPICKVAL(NATT_Oil_Type__c,&quot;Mineral&quot;), NATT_Engine_Hours_Year__c &gt; 1500), 1500, NATT_Engine_Hours_Year__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeleteEngine Hours per Period</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>