NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Engine_Hours_Year__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_Hours_Year__c</fullName>
    <description>natt bluedge</description>
    <formula>IF( NATT_Standby__c = FALSE,  
  NATT_CMRA_Term_Hours__c / NATT_CMRA_Term_Years__c , 
  (NATT_CMRA_Term_Hours__c / NATT_CMRA_Term_Years__c)* (1- NATT_Standby_Operation__c )
)</formula>
    <label>zDeleteEngine Hours/Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>