NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_eSolutions_Plan__c.field-meta.xml
<CustomField>
    <fullName>NATT_eSolutions_Plan__c</fullName>
    <description>used in rollups and email template</description>
    <label>Lynx Fleet Plan #</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>