NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Exclude_From_Discount_Calculations__c.field-meta.xml
<CustomField>
    <fullName>NATT_Exclude_From_Discount_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in discount calculations</description>
    <label>Exclude From Discount Calculations</label>
    <type>Checkbox</type>
</CustomField>