NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Extended_Basic_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Extended_Basic_Hours__c</fullName>
    <label>Extended Basic Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Hours</valueSetName>
    </valueSet>
</CustomField>