NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Extended_Basic_Months__c.field-meta.xml
<CustomField>
    <fullName>NATT_Extended_Basic_Months__c</fullName>
    <description>NATT Configuration</description>
    <label>Extended Basic Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>