NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Extended_Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Extended_Basic_Price__c</fullName>
    <description>The field is used in QCP to store the Extended Basic Price, whenever the Coverage Type is selected as Extended Basic + Major Components</description>
    <label>Extended Basic Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>