NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Extended_Basic_Price_Subtraction__c.field-meta.xml
<CustomField>
    <fullName>NATT_Extended_Basic_Price_Subtraction__c</fullName>
    <description>This stores the price of extended Basic to be subtracted from Major Component Coverage if the BluEdge selection is Extended Basic + Major Component Coverage</description>
    <label>Extended Basic Price Subtraction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>