NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Factory_Installed__c.field-meta.xml
<CustomField>
    <fullName>NATT_Factory_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used with eSolutions Only</description>
    <label>Factory Installed?</label>
    <type>Checkbox</type>
</CustomField>