NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Factory_Installed_Value__c.field-meta.xml
<CustomField>
    <fullName>NATT_Factory_Installed_Value__c</fullName>
    <description>for quote template</description>
    <formula>IF(NATT_Factory_Installed__c = TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Factory Installed Value</label>
    <type>Text</type>
</CustomField>