NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Feature_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Category__c</fullName>
    <formula>IF(SBQQ__ProductName__c = &apos;APX Flushmount Remote Control Panel Enclosure (ships with unit)&apos;, &apos;Standard Sales Options&apos;, TEXT(SBQQ__ProductOption__r.SBQQ__Feature__r.SBQQ__Category__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Category</label>
    <type>Text</type>
</CustomField>