NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_fx_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_fx_Serial_Number__c</fullName>
    <formula>IF( TEXT(NATT_Tavant_Id__c)=&quot;&quot; &amp;&amp; NATT_P_N__c &lt;&gt; &quot;BLUEDGE ENHANCE&quot; &amp;&amp; NATT_P_N__c &lt;&gt; &quot;BLUEDGE ELITE&quot;, &quot;&quot;,NATT_Serial_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>